docs: improve learning section with design pattern documentation
- Add Merkelized Validator and Linked List pattern pages
- Enhance existing pattern pages with code examples and API tables
- Reorganize README by category (Optimization, Indexing, Data Structures, Utilities)
- Fix GitHub URLs (nau/scalus → scalus3/scalus)
- Add _meta.js for sidebar ordering

--- a/scalus-site/content/catalyst/multiplatform-1100198.mdx
+++ b/scalus-site/content/catalyst/multiplatform-1100198.mdx
@@ -60,7 +60,7 @@ We successfully addressed these KPIs through the following achievements:
    and [ScalaTest](https://www.scalatest.org/), and comparing results with the Haskell `uplc` CLI
    tool to ensure we are getting the same results as the reference implementation.
 9. Passing all Plutus V1 and V2
-   [conformance tests](https://github.com/nau/scalus/blob/a87f25a91e58311cfac341ef893dc5ce1af0e571/scalus-core/shared/src/test/scala/scalus/uplc/eval/PlutusConformanceTest.scala#L17)
+   [conformance tests](https://github.com/scalus3/scalus/blob/a87f25a91e58311cfac341ef893dc5ce1af0e571/scalus-core/shared/src/test/scala/scalus/uplc/eval/PlutusConformanceTest.scala#L17)
 10. Extensive testing on \~100k mainnet Plutus scripts, ensuring high accuracy and reliability.
 11. Publishing platform artifacts on [Maven Central](https://central.sonatype.com/) for JVM,
     and [NPM](https://www.npmjs.com/) for JavaScript platforms, making the library easily accessible
@@ -87,7 +87,7 @@ productivity.
 ### Accuracy and Reliability
 
 Passed all Plutus V1 and
-V2 [Plutus Conformance](https://github.com/nau/scalus/blob/a87f25a91e58311cfac341ef893dc5ce1af0e571/scalus-core/shared/src/test/scala/scalus/uplc/eval/PlutusConformanceTest.scala#L17),
+V2 [Plutus Conformance](https://github.com/scalus3/scalus/blob/a87f25a91e58311cfac341ef893dc5ce1af0e571/scalus-core/shared/src/test/scala/scalus/uplc/eval/PlutusConformanceTest.scala#L17),
 demonstrating compatibility with the reference Haskell implementation.
 
 Implemented thorough testing against \~100k Cardano mainnet scripts to ensure correctness and
@@ -139,7 +139,7 @@ development.
 
 ## Links to Other Relevant Project Sources or Documents
 
-* [Scalus GitHub Repository](https://github.com/nau/scalus)
+* [Scalus GitHub Repository](https://github.com/scalus3/scalus)
 * [Scalus Website](https://scalus.org)
 * [Scalus API Reference](https://scalus.org/api/index.html)
 * [Discord Community](https://discord.gg/ygwtuBybsy)
