--- a/scalus-site/content/catalyst/scalus-1100252.mdx
+++ b/scalus-site/content/catalyst/scalus-1100252.mdx
@@ -101,7 +101,7 @@ de‑facto full‑stack platform for Cardano DApps.
 
 ## Resources
 
-* GitHub • [https://github.com/nau/scalus](https://github.com/nau/scalus)
+* GitHub • [https://github.com/scalus3/scalus](https://github.com/scalus3/scalus)
 * Docs • [https://scalus.org/api/index.html](https://scalus.org/api/index.html)
 * Starter • [https://github.com/lantr-io/scalus-starter](https://github.com/lantr-io/scalus-starter)
 * Discord • [https://discord.gg/ygwtuBybsy](https://discord.gg/ygwtuBybsy)
